array.island.Island.scala.error
Compilation error:
Island:9: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if (num(i) < num(i+1) && statut = 0) //debut de colline
                          ^Island:12: error: not found: value nbNiveau
      nbNiveau += 1;
      ^